I don't want to write proper commit at 3am

--- a/processor/Makefile
+++ b/processor/Makefile
@@ -1,15 +1,15 @@
 .DEFAULT_GOAL := docker-build
 
 build:
-	CGO_ENABLED=0 go build ./ -o ./service 
+	CGO_ENABLED=0 go build -o ./service -a ./ 
 
 docker-build:
 	docker build -t processor .
 
 test-unit:
-	go test -v -test.race -tag=unit ./...
+	go test -v -test.race -tags=unit -benchmem -bench=. ./... 
 
 test-integration:
-	go test -v -test.race -tag=integration ./tests/... 
+	go test -v -test.race --tags=integration ./tests/... 
 
-.PHONY: build docker-build dep test-unit test-processor-integration
+.PHONY: bench build docker-build dep test-unit test-processor-integration
